Fixed underline alignment issue

--- a/src/components/WeeklyCare.css
+++ b/src/components/WeeklyCare.css
@@ -19,8 +19,9 @@
     background-size: cover;
     background-position: center top;
     background-repeat: no-repeat;
-    padding: 4vw 0;
+    padding: 0vw 0;
     box-sizing: border-box;
+    margin-top: -1px;
 }
 
 /* =========================
@@ -56,7 +57,7 @@
 /* Underline extends from left edge of screen to end of title */
 .weekly-header-underline {
     position: relative;
-    width: 100vw;
+    width: 100%;
     right: 0;
     margin-left: calc(-100vw + 100%);
     height: 2px;
